force-app/main/default/objects/TechnicalReport__c/TechnicalReport__c.object-meta.xml
<CustomObject>
    <description>RTR</description>
    <label>Relatório Técnico</label>
    <nameField>
        <displayFormat>RTR-{0000}</displayFormat>
        <label>Relatório Técnico Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relatórios Técnicos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>