force-app/main/default/objects/TechnicalReport__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data da Finalização</label>
    <required>true</required>
    <type>Date</type>
</CustomField>