force-app/main/default/objects/TechnicalReport__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>Horário da Finalização</label>
    <required>true</required>
    <type>Time</type>
</CustomField>