force-app/main/default/objects/TechnicalReport__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Observações</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>