force-app/main/default/objects/TechnicalReport__c/fields/rtrControl__c.field-meta.xml
<CustomField>
    <fullName>rtrControl__c</fullName>
    <label>RTR Item</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>