force-app/main/default/objects/TechnicalReport__c/fields/VisitPlanning__c.field-meta.xml
<CustomField>
    <fullName>VisitPlanning__c</fullName>
    <label>Visita</label>
    <referenceTo>VisitPlanning__c</referenceTo>
    <relationshipLabel>Relatórios Técnicos</relationshipLabel>
    <relationshipName>Relatorios_Tecnicos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>