force-app/main/default/objects/TechnicalReport__c/validationRules/Valida_Status_Cancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Status_Cancelado</fullName>
    <active>true</active>
    <description>Ao cancelar um RTR, é obrigatório o preenchimento do campo Motivo do Cancelamento.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Cancelado&quot;) &amp;&amp;
 ISBLANK(CancellationReason__c)</errorConditionFormula>
    <errorMessage>Informe o Motivo do Cancelamento.</errorMessage>
</ValidationRule>